# scanner-bench

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
c_scanners_ffi/: CMakeLists.txt  ffi.cpp
lib/: c_scanners_ffi.lib
src/: lib.rs  main.rs  pattern.rs  scanner.rs
src/scanners/: foreign.rs  mod.rs  multi_needle_simd.rs  simd.rs  simd_scanner.rs
