[package]
name = "scanner-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type= [ "cdylib" ]

[dependencies]
pelite = "0.10"
aho-corasick = "1.1.3"
log = "0.4.21"
simple_logger = "5.0.0"

[dependencies.windows]
version = "0.57"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
]

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = "debuginfo"
lto = true
opt-level = 3
codegen-units = 1
incremental = false